# bruno-rebaza-ttd-label-verification

./: .env.example  .gitignore  AGENTS.md  IMPLEMENTATION.md  README.md  architecture.md  pyproject.toml  render.yaml
backend/app/: __init__.py  batch.py  comparison.py  config.py  errors.py  exceptions.py  image_preprocess.py  main.py  routes.py  schemas.py  validation.py  verification.py  vision_service.py
docs/: architecture.md
docs/plan/: phase-0.md  phase-1.md  phase-10-repository-documentation.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  App.test.jsx  styles.css
frontend/src/components/: BatchResultView.jsx  BatchVerificationForm.jsx  ErrorAlert.jsx  FieldInput.jsx  ImagePicker.jsx  LoadingPanel.jsx  ProgressPanel.jsx  RemoveBatchItemDialog.jsx  StickySubmitAction.jsx  VerificationForm.jsx  VerificationResultView.jsx  loadingPanels.test.jsx  removeBatchItemDialog.test.jsx  verificationForm.test.jsx
frontend/src/verification/: api.js  constants.js  errors.js  form.js  form.test.js  formatters.js
scripts/: benchmark_verification.py  extract_label_sample.py
tests/: test_comparison.py  test_config.py  test_health.py  test_image_preprocess.py  test_startup_validation.py  test_verify_batch_endpoint.py  test_verify_endpoint.py  test_vision_service.py
