[project]
name = "ttb-label-verification"
version = "0.1.0"
description = "Proof-of-concept TTB label verification app."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "openai>=2,<3",
    "pillow>=11,<13",
    "python-multipart>=0.0.20",
    "rapidfuzz>=3.14,<4",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

